; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/extr_access_log.c_log_access.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/extr_access_log.c_log_access.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_access_logger_t = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @log_access to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @log_access(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.st_h2o_access_logger_t*, align 8
  %6 = alloca %struct.TYPE_2__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca [4096 x i8], align 16
  %9 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = bitcast i32* %10 to %struct.st_h2o_access_logger_t*
  store %struct.st_h2o_access_logger_t* %11, %struct.st_h2o_access_logger_t** %5, align 8
  %12 = load %struct.st_h2o_access_logger_t*, %struct.st_h2o_access_logger_t** %5, align 8
  %13 = getelementptr inbounds %struct.st_h2o_access_logger_t, %struct.st_h2o_access_logger_t* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  store %struct.TYPE_2__* %14, %struct.TYPE_2__** %6, align 8
  store i64 4096, i64* %9, align 8
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = getelementptr inbounds [4096 x i8], [4096 x i8]* %8, i64 0, i64 0
  %20 = call i8* @h2o_log_request(i32 %17, i32* %18, i64* %9, i8* %19)
  store i8* %20, i8** %7, align 8
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i8*, i8** %7, align 8
  %25 = load i64, i64* %9, align 8
  %26 = call i32 @write(i32 %23, i8* %24, i64 %25)
  %27 = load i8*, i8** %7, align 8
  %28 = getelementptr inbounds [4096 x i8], [4096 x i8]* %8, i64 0, i64 0
  %29 = icmp ne i8* %27, %28
  br i1 %29, label %30, label %33

30:                                               ; preds = %2
  %31 = load i8*, i8** %7, align 8
  %32 = call i32 @free(i8* %31)
  br label %33

33:                                               ; preds = %30, %2
  ret void
}

declare dso_local i8* @h2o_log_request(i32, i32*, i64*, i8*) #1

declare dso_local i32 @write(i32, i8*, i64) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
